tests/mypy/mypy_wrap_function_wrapper_t6.out
tests/mypy/mypy_wrap_function_wrapper_t6.py:27: error: Argument 3 to "wrap_function_wrapper" has incompatible type "Callable[[Any], Any]"; expected "Callable[[Callable[..., Any], Any, tuple[Any, ...], dict[str, Any]], Any]"  [arg-type]
Found 1 error in 1 file (checked 1 source file)
